src/test/deca/etape_A/invalid/list_decl.deca
// Description :
//   test de déclarations multiples

// Résulats :
//   Erreur syntaxique
//   Ligne 9 : mismatched input ',' expecting {'instanceof', ';', '=', '&&', '||', '==', '!=', '<=', '>=', '<', '>', '+', '-', '*', '/', '%', '.'}


{
x,y;
}